samples/_failures_safe/1761796494_83ca06_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8e0c1ad4.c: In function ‘main’:
./samples/SAFE/__tmp_8e0c1ad4.c:163:5: error: expected expression at end of input
  163 |     if (
      |     ^~
./samples/SAFE/__tmp_8e0c1ad4.c:163:5: error: expected declaration or statement at end of input
